--- a/src/Mod/Surfaces/surfUtils/CMakeLists.txt
+++ b/src/Mod/Surfaces/surfUtils/CMakeLists.txt
@@ -1,10 +1,28 @@
+SET(Surfaces_Utils
+	__init__.py
+	Geometry.py
+	Math.py
+	Paths.py
+	Translator.py
+)
+
+SOURCE_GROUP("" FILES ${Surfaces_Utils})
+
+ADD_CUSTOM_TARGET(SurfacesUtils ALL
+    SOURCES ${Surfaces_Utils}
+)
+
+fc_copy_sources("Mod/Surfaces/surfUtils" "Surfaces/surfUtils" ${Surfaces_Utils})
+
 INSTALL(
     FILES
-		__init__.py
-		Geometry.py
-		Math.py
-		Paths.py
-		Translator.py
+		${Surfaces_Utils}
+    DESTINATION
+		Mod/Surfaces/surfUtils
+)
+
+INSTALL(
+    FILES
     DESTINATION
         Mod/Surfaces/surfUtils
 )
