added RFE526 - 90 degrees view rotation commands
+ added viewRotateLeft() and viewRotateRight() py methods to View3D
+ added ViewRotateLeft and ViewRotateRight FreeCAD commands
+ added them in View->Standard Views and Context->Standard Views menus

--- a/src/Gui/Icons/Makefile.am
+++ b/src/Gui/Icons/Makefile.am
@@ -86,6 +86,8 @@ EXTRA_DIST = \
 		view-zoom-in.svg \
 		view-zoom-out.svg \
 		view-zoom-selection.svg \
+		view-rotate-left.svg \
+		view-rotate-right.svg \
 		Tree_Annotation.svg \
 		Tree_Dimension.svg \
 		Tree_Python.svg \
