+ implement OCAF browser
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5405 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Import/Gui/Makefile.am
+++ b/src/Mod/Import/Gui/Makefile.am
@@ -18,7 +18,7 @@ libImportGui_la_LDFLAGS = \
 		-L../../../Gui  \
 		-L../../Part/App \
 		-L../../Part/Gui \
-		-L$(OCC_LIB) $(QT4_CORE_LIBS) $(all_libraries) \
+		-L$(OCC_LIB) $(QT_LIBS) $(all_libraries) \
 		-version-info @LIB_CURRENT@:@LIB_REVISION@:@LIB_AGE@
 
 libImportGui_la_CPPFLAGS = -DAppPartExport= -DAppPartGuiExport=
