Added Drawing_OpenBrowserView command
While the Drawing viewer is still based on QtSvg,
I added this little button to make it handy to
check how a page renders in the webkit window.

--- a/src/Mod/Drawing/Gui/Resources/Makefile.am
+++ b/src/Mod/Drawing/Gui/Resources/Makefile.am
@@ -19,6 +19,7 @@ EXTRA_DIST = \
 		icons/actions/drawing-landscape-new.svg \
 		icons/actions/drawing-portrait-A4.svg \
 		icons/actions/drawing-orthoviews.svg \
+		icons/actions/drawing-openbrowser.svg \
 		icons/Page.svg \
 		icons/Pages.svg \
 		icons/View.svg \
