Added Hydrostatics development tools

--- a/src/Mod/Ship/Makefile.am
+++ b/src/Mod/Ship/Makefile.am
@@ -43,6 +43,8 @@ nobase_data_DATA = \
 	shipAreasCurve/Preview.py \
 	shipAreasCurve/TaskPanel.py \
 	shipAreasCurve/TaskPanel.ui \
+	shipHydrostatics/__init__.ui \
+	shipHydrostatics/Tools.ui \
 	shipUtils/__init__.py \
 	shipUtils/Math.py \
 	shipUtils/Paths.py \
