Created transversal areas curve plot tool

--- a/src/Mod/Ship/CMakeLists.txt
+++ b/src/Mod/Ship/CMakeLists.txt
@@ -51,6 +51,7 @@ SOURCE_GROUP("shipoutlinedraw" FILES ${ShipOutlineDraw_SRCS})
 
 SET(ShipAreasCurve_SRCS
 	shipAreasCurve/__init__.py
+	shipAreasCurve/Plot.py
 	shipAreasCurve/Preview.py
 	shipAreasCurve/TaskPanel.py
 	shipAreasCurve/TaskPanel.ui
