--- a/src/Mod/Ship/Makefile.am
+++ b/src/Mod/Ship/Makefile.am
@@ -22,6 +22,9 @@ nobase_data_DATA = \
 	Icons/Ico.png \
 	Icons/Ico.xcf \
 	Icons/Ico.xpm \
+	Icons/LoadIco.png \
+	Icons/LoadIco.xcf \
+	Icons/LoadIco.xpm \
 	Icons/OutlineDrawIco.png \
 	Icons/OutlineDrawIco.xcf \
 	Icons/OutlineDrawIco.xpm \
