--- a/src/Mod/Ship/CMakeLists.txt
+++ b/src/Mod/Ship/CMakeLists.txt
@@ -35,6 +35,12 @@ SET(ShipIcons_SRCS
 )
 SOURCE_GROUP("shipicons" FILES ${ShipIcons_SRCS})
 
+SET(ShipExamples_SRCS
+	Examples/s60.fcstd
+	Examples/barehull5415.fcstd
+)
+SOURCE_GROUP("shipexamples" FILES ${ShipExamples_SRCS})
+
 SET(ShipLoadExample_SRCS
 	shipLoadExample/__init__.py
 	shipLoadExample/TaskPanel.py
@@ -82,7 +88,7 @@ SET(ShipUtils_SRCS
 )
 SOURCE_GROUP("shiputils" FILES ${ShipUtils_SRCS})
 
-SET(all_files ${ShipMain_SRCS} ${ShipIcons_SRCS} ${ShipLoadExample_SRCS} ${ShipCreateShip_SRCS} ${ShipOutlineDraw_SRCS} ${ShipAreasCurve_SRCS} ${ShipHydrostatics_SRCS} ${ShipUtils_SRCS})
+SET(all_files ${ShipMain_SRCS} ${ShipIcons_SRCS} ${ShipExamples_SRCS} ${ShipLoadExample_SRCS} ${ShipCreateShip_SRCS} ${ShipOutlineDraw_SRCS} ${ShipAreasCurve_SRCS} ${ShipHydrostatics_SRCS} ${ShipUtils_SRCS})
 
 ADD_CUSTOM_TARGET(Ship ALL
     SOURCES ${all_files}
@@ -95,6 +101,12 @@ INSTALL(
         ${ShipIcons_SRCS}
     DESTINATION
         Mod/Ship/Icons
+)
+INSTALL(
+    FILES
+        ${ShipExamples_SRCS}
+    DESTINATION
+        Mod/Ship/Examples
 )
 INSTALL(
     FILES
