Added s60 katamaran model geometry example

--- a/src/Mod/Ship/Makefile.am
+++ b/src/Mod/Ship/Makefile.am
@@ -35,6 +35,7 @@ nobase_data_DATA = \
 	Icons/Ship.xpm \
 	Examples/s60.fcstd \
 	Examples/barehull5415.fcstd \
+	Examples/s60_katamaran.fcstd \
 	shipLoadExample/__init__.py \
 	shipLoadExample/TaskPanel.py \
 	shipLoadExample/TaskPanel.ui \
