update idf import and small fixes
git-svn-id: https://free-cad.svn.sourceforge.net/svnroot/free-cad/trunk@5432 e8eeb9e2-ec13-0410-a4a9-efa5cf37419d

--- a/src/Mod/Idf/CMakeLists.txt
+++ b/src/Mod/Idf/CMakeLists.txt
@@ -36,6 +36,9 @@ SET(IdfLibs_SRCS
     lib/TSM_104_01_L_DV_A.stp
     lib/TSS0P_8.stp
     lib/VC0603_SMD.stp
+    lib/RLF_12545.igs
+    lib/SOT23.igs
+    lib/SOT404.igs
 )
 SOURCE_GROUP("Idflibs" FILES ${IdfLibs_SRCS})
 
