Add makedist script and custom build target

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -467,3 +467,9 @@ if(FREECAD_MAINTAINERS_BUILD AND NOT WIN32)
 	#ADD_CUSTOM_TARGET(DIST make package_source)
 
 endif(FREECAD_MAINTAINERS_BUILD AND NOT WIN32)
+    add_custom_target(dist-git
+            COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/src/Tools/makedist.py
+              --srcdir=${CMAKE_SOURCE_DIR} --bindir=${CMAKE_BINARY_DIR}
+              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+
