--- a/src/3rdParty/CMakeLists.txt
+++ b/src/3rdParty/CMakeLists.txt
@@ -22,9 +22,13 @@ elseif(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKFILE7X)
 elseif(FREECAD_BUILD_GUI)
     find_path(COIN_VERSION3 Inventor/scxml/ScXML.h ${COIN3D_INCLUDE_DIR})
     if (COIN_VERSION3)
-    add_subdirectory(Pivy-0.5)
+    if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy-0.5)
+        add_subdirectory(Pivy-0.5)
+    endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy-0.5)
     else (COIN_VERSION3)
-    add_subdirectory(Pivy)
+    if (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy)
+        add_subdirectory(Pivy)
+    endif (EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/Pivy)
     endif(COIN_VERSION3)
 endif(FREECAD_BUILD_GUI AND FREECAD_LIBPACK_CHECKFILE6X)
 
