Add distcheck target for GCC and MinGW

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -477,4 +477,16 @@ endif(FREECAD_MAINTAINERS_BUILD AND NOT WIN32)
               --srcdir=${CMAKE_SOURCE_DIR} --bindir=${CMAKE_BINARY_DIR} --dfsg
               WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
     )
+if(CMAKE_COMPILER_IS_GNUCXX OR MINGW)
+    add_custom_target(distcheck-git
+            COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/src/Tools/makedist.py
+              --srcdir=${CMAKE_SOURCE_DIR} --bindir=${CMAKE_BINARY_DIR} --check
+              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+    add_custom_target(distcheckdfsg-git
+            COMMAND ${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/src/Tools/makedist.py
+              --srcdir=${CMAKE_SOURCE_DIR} --bindir=${CMAKE_BINARY_DIR} --dfsg --check
+              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    )
+endif(CMAKE_COMPILER_IS_GNUCXX OR MINGW)
 
