Experiment with keyword expansion

--- a/.gitattributes
+++ b/.gitattributes
@@ -14,3 +14,5 @@ UpdateResources.bat    export-ignore
 BuildVersion.bat    export-ignore
 *.sln    export-ignore
 WindowsInstaller    export-ignore
+Version.h.in    export-subst
+
