Fix INSTALL target in cmake files

--- a/src/Mod/Drawing/CMakeLists.txt
+++ b/src/Mod/Drawing/CMakeLists.txt
@@ -8,6 +8,9 @@ INSTALL(
     FILES
         Init.py
         InitGui.py
+        DrawingAlgos.py
+        DrawingExample.py
+        DrawingTests.py
     DESTINATION
         Mod/Drawing
 )
