--- a/src/Mod/Fem/CMakeLists.txt
+++ b/src/Mod/Fem/CMakeLists.txt
@@ -8,6 +8,8 @@ INSTALL(
     FILES
         Init.py
         InitGui.py
+        convert2TetGen.py
+        FemExample.py
     DESTINATION
         Mod/Fem
 )
