--- a/src/Mod/Part/CMakeLists.txt
+++ b/src/Mod/Part/CMakeLists.txt
@@ -8,6 +8,9 @@ INSTALL(
     FILES
         Init.py
         InitGui.py
+        MakeBottle.py
+        TestPartApp.py
+        TestPartGui.py
     DESTINATION
         Mod/Part
 )
