--- a/src/Mod/Sketcher/CMakeLists.txt
+++ b/src/Mod/Sketcher/CMakeLists.txt
@@ -8,6 +8,10 @@ INSTALL(
     FILES
         Init.py
         InitGui.py
+        SketcherExample.py
+        TestSketcherApp.py
+        TestSketcherGui.py
     DESTINATION
         Mod/Sketcher
 )
+
