--- a/src/Mod/Drawing/CMakeLists.txt
+++ b/src/Mod/Drawing/CMakeLists.txt
@@ -14,3 +14,11 @@ INSTALL(
     DESTINATION
         Mod/Drawing
 )
+
+INSTALL(
+    DIRECTORY
+        Templates
+    DESTINATION
+        ${CMAKE_INSTALL_DATADIR}/Mod/Drawing
+    FILES_MATCHING PATTERN "*.svg*"
+)
