--- a/src/Mod/Robot/CMakeLists.txt
+++ b/src/Mod/Robot/CMakeLists.txt
@@ -15,3 +15,13 @@ INSTALL(
     DESTINATION
         Mod/Robot
 )
+
+INSTALL(
+    DIRECTORY
+        Lib
+    DESTINATION
+        ${CMAKE_INSTALL_DATADIR}/Mod/Robot
+    PATTERN "Makefile*" EXCLUDE
+    PATTERN "*.pdf" EXCLUDE
+)
+
