--- a/src/Mod/Start/StartPage/CMakeLists.txt
+++ b/src/Mod/Start/StartPage/CMakeLists.txt
@@ -27,6 +27,6 @@ SET(StartPage_DATA
 )
 
 INSTALL(FILES ${StartPage_SRCS} ${StartPage_DATA}
-    DESTINATION Mod/Start/StartPage
+    DESTINATION ${CMAKE_INSTALL_DATADIR}/Mod/Start/StartPage
 )
 
