--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -12,9 +12,9 @@ if(FREECAD_BUILD_GUI)
 	configure_file(Doc/freecad.qch ${CMAKE_BINARY_DIR}/doc/freecad.qch COPYONLY)
 endif(FREECAD_BUILD_GUI)
 
-#if(FREECAD_MAINTAINERS_BUILD)
+if(FREECAD_MAINTAINERS_BUILD)
 	add_subdirectory(Doc)
-#endif(FREECAD_MAINTAINERS_BUILD)
+endif(FREECAD_MAINTAINERS_BUILD)
 
 if(FREECAD_MAINTAINERS_BUILD AND WIN32)
 	#add_subdirectory(WindowsInstaller)
