Added some hydrostatics computation.

--- a/src/Mod/Ship/Makefile.am
+++ b/src/Mod/Ship/Makefile.am
@@ -54,6 +54,7 @@ nobase_data_DATA = \
 	shipAreasCurve/TaskPanel.py \
 	shipAreasCurve/TaskPanel.ui \
 	shipHydrostatics/__init__.py \
+	shipHydrostatics/Plot.py \
 	shipHydrostatics/TaskPanel.py \
 	shipHydrostatics/TaskPanel.ui \
 	shipHydrostatics/Tools.py \
